# AgentForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.venv_publish_check/: pyvenv.cfg
.venv_publish_check/Scripts/: activate  activate.bat
create_agent_app/: __main__.py  cli.py  config.py  generator.py  prompts.py
create_agent_app/templates/multi_agent/: .env.example.j2  CUSTOMISATION.md.j2  README.md.j2  config.yaml.j2  main.py.j2  requirements.txt.j2
create_agent_app/templates/multi_agent/agents/: state.py.j2
create_agent_app/templates/multi_agent/api/: main.py.j2
create_agent_app/templates/multi_agent/core/: config.py.j2  validator.py.j2
create_agent_app/templates/multi_agent/memory/: checkpointer.py.j2  state.py.j2
create_agent_app/templates/multi_agent/tests/: test_pipeline.py.j2  test_supervisor.py.j2  test_workers.py.j2
create_agent_app/templates/multi_agent/tools/: base.py.j2  web_search.py.j2
create_agent_app/templates/rag_agent/: docker-compose.yml.j2  main.py.j2
create_agent_app/templates/rag_agent/agent/: graph.py.j2  nodes.py.j2  prompts.py.j2  state.py.j2
create_agent_app/templates/rag_agent/agents/: rag_agent.py.j2
create_agent_app/templates/rag_agent/api/: main.py.j2
create_agent_app/templates/rag_agent/core/: config.py.j2  llm.py.j2  observability.py.j2  validator.py.j2
create_agent_app/templates/rag_agent/memory/: checkpointer.py.j2  semantic_cache.py.j2
create_agent_app/templates/rag_agent/rag/: embeddings.py.j2  grader.py.j2  ingestion.py.j2  reranker.py.j2  retriever.py.j2  vectorstore.py.j2
create_agent_app/templates/rag_agent/sample_docs/: sample.txt
create_agent_app/templates/rag_agent/security/: input_guard.py.j2  output_guard.py.j2
create_agent_app/templates/rag_agent/tests/: test_grader.py.j2  test_guards.py.j2  test_pipeline.py.j2  test_retriever.py.j2
create_agent_app/templates/react_agent/: .env.example.j2  CUSTOMISATION.md.j2  Dockerfile.j2  README.md.j2  config.yaml.j2  main.py.j2  requirements.txt.j2
create_agent_app/templates/shared/: .env.example.j2  CUSTOMISATION.md.j2  README.md.j2  config.py.j2  config.yaml.j2  requirements.txt.j2
create_agent_app/templates/single_agent/: .env.example.j2  README.md.j2  config.py.j2  main.py.j2
tmp_cli_check/module2-cli-demo/: README.md  config.py
tmp_module2_check/multi_agent-demo/: README.md  config.py
tmp_module2_check/multi_agent-demo/agents/: supervisor.py
tmp_module2_check/rag_agent-demo/: README.md  config.py
tmp_module2_check/rag_agent-demo/sample_docs/: sample.txt
tmp_module2_check/single_agent-demo/: .env.example  README.md  config.py  requirements.txt
tmp_module3_single/demo-single/: README.md  config.py
tmp_module3_single/demo-single/api/: main.py
tmp_module3_single/demo-single/tools/: sample_tool.py
tmp_module4_multi/demo-multi/: README.md  config.py
tmp_module4_multi/demo-multi/agents/: supervisor.py
tmp_module4_multi/demo-multi/api/: main.py
tmp_module4_multi/demo-multi/tools/: search_tool.py
tmp_module5_rag/demo-rag/: README.md  config.py
tmp_module5_rag/demo-rag/api/: main.py
tmp_module5_rag/demo-rag/rag/: ingest.py
tmp_module5_rag/demo-rag/tools/: retriever_tool.py
tmp_polish/cli-success/: .env.example  README.md  config.py  main.py  requirements.txt
tmp_polish/cli-success/api/: main.py
tmp_polish/existing-dir/: .env.example  README.md  config.py
tmp_polish/existing-dir/api/: main.py
(+33 files in other folders)
