[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create-agent-app"
version = "0.1.2"
description = "Vite-style CLI scaffolder for production-grade Agentic AI projects in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Saichandra" }
]
keywords = ["ai", "agentic-ai", "langgraph", "scaffolding", "cli", "templates"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "typer>=0.12.0",
  "questionary>=2.0.1",
  "jinja2>=3.1.4",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "click>=8.1.7",
]

[project.scripts]
create-agent-app = "create_agent_app.cli:app"

[project.urls]
Homepage = "https://github.com/Saichandra2520/agentforge"
Documentation = "https://github.com/Saichandra2520/agentforge#readme"
Repository = "https://github.com/Saichandra2520/create-agent-app"
Issues = "https://github.com/Saichandra2520/create-agent-app/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=6.0.0",
  "pytest>=8.0.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["create_agent_app*"]

[tool.setuptools.package-data]
create_agent_app = ["templates/**/*.j2", "templates/shared/.env.example.j2"]
